--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,11 +1,6 @@
 # Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
-on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit
-  workflow_dispatch:
-  push: {branches: ["master", "main"]}
+on: workflow_call
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -26,11 +21,16 @@ jobs:
 
           # Options
           user: Kafalar-Karisik
-          template: terminal
+          template: classic
           base: header, activity, community, repositories, metadata
-          base_indepth: yes
-          config_octicon: yes
           config_timezone: Europe/Berlin
+          plugin_habits: yes
+          plugin_habits_charts_type: classic
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
@@ -39,10 +39,13 @@ jobs:
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_limit: 8
-          plugin_languages_other: yes
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          repositories_skipped: Kafalar-Karisik/kafalar-karisik.github.io,Kafalar-Karisik/MyCerts,Kafalar-Karisik/mue
+          plugin_people: yes
+          plugin_people_limit: 24
+          plugin_people_size: 28
+          plugin_people_types: followers, following
+          repositories_skipped: kafalar-karisik.github.io,mue,MyCerts
